Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-36837

"background-color" css style in QML TextEdit does not work on most tags

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.5.0
    • 5.2.1
    • None
    • Kubuntu 12.04 64bit
    • f09bd9825b29612f98d884460504b07150bcb639

      Setting the background-color css-style in the text of a QML TextEdit item has no visible effect on most tags.
      The only tags where it works are the <table> and the <body> tag.
      When using these tags, the background color is displayed as expected.
      Every other tag I've tried (<p>, <span>, <td>, <tr> ...) seem to ignore
      the background-color.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            andysh Andy Shaw
            lkdem Ludger Krämer
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes